fixed footer alignment

--- a/style.css
+++ b/style.css
@@ -445,6 +445,7 @@ footer{
     background: #111;
     padding: 20px 23px;
     color: #fff;
+    text-align: center;
 }
 footer span a{
     color: crimson;
